adds property 'status' to Game
