# src/flaskr/api.py
@@ -46,6 +46,12 @@ def some_game__get__info(game_id, ):
     return games_controller.some_game__get__info(request, game_id)
 
 
+@bp.put('/games/<game_id>/status')
+def some_game__put__status(game_id, ):
+    """Changes the status of the game with this ID (if it exists) using the data in the request body"""
+    return games_controller.some_game__put__status(request, game_id)
+
+
 @bp.post('/games/<game_id>/moves')
 def some_game__post__move(game_id, ):
     """Perform another move in the game with the given ID by adding a move to the list of moves for this game"""
